# DB_project

./: README.md  config.py  main.py  pyproject.toml
data/: suppliers.json
db_project/: GetSupplierInfo.py  utils.py
db_project/sql_queries/: SQL_requests.py  customers_page.sql  employees_page.sql  init_db.sql  orders_page.sql  products_page.sql  updated_db.sql
